infer/tests/codetoanalyze/objc/errors/property/IvarExample.h
/*
 * Copyright (c) 2014 - Facebook.
 * All rights reserved.
 */

#import <Foundation/NSObject.h>

@interface IvarExample : NSObject {
}
@property int aProperty;
@end

